# dnd-combat-tracker

./: .env.example  .gitignore  CLAUDE.md  D&D Combat Tracker.xlsx  Makefile  README.md  pyproject.toml
dnd_combat_tracker/: ai_generator.py  config.py  dnd_api.py
dnd_combat_tracker/api/: app.py  server.py
dnd_combat_tracker/api/routers/: ai.py  characters.py  combat.py  creatures.py  dnd_api.py  encounters.py  settings.py  status.py
dnd_combat_tracker/backends/: __init__.py  base.py  claude.py  forge_image.py  gemini.py  gemini_image.py  image_base.py  ollama.py  openai.py
dnd_combat_tracker/db/: characters.py  combat.py  creatures.py  encounters.py  engine.py  models.py  settings.py
tests/: conftest.py  test_ai_generator.py  test_api_ai.py  test_api_creatures.py  test_api_encounters.py  test_backends.py  test_combat.py  test_db_characters.py  test_db_creatures.py  test_db_encounters.py  test_dnd_api.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/pages/: Bestiary.tsx  Combat.tsx  Encounters.tsx  Party.tsx  Settings.tsx
web/src/utils/: encounterDifficulty.ts
