[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnd-combat-tracker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "httpx>=0.27",
    "black>=24.0",
]

[project.scripts]
dnd-combat-tracker = "dnd_combat_tracker.api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["dnd_combat_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
